--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : 假装是GEEK
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : Tracy Su
+  email : tracysu1860@me.com
+  github : TracySu
   twitter : username
   feedburner : feedname
 
