--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : 假装是GEEK
 tagline: Site Tagline
 author :
   name : Tracy Su
-  email : tracysu1860@me.com
+  email : tracysu1860@gmail.com
   github : TracySu
   twitter : username
   feedburner : feedname
