--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # This is the default format. 
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink: /:categories/:year/:month/:day/:title 
+permalink: /:categories/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
@@ -9,14 +9,19 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 假装是GEEK
-tagline: Site Tagline
+title : PingMyGeek		
+tagline: Ping the sleeping geek in you !
 author :
-  name : Tracy Su
-  email : tracysu1860@gmail.com
-  github : TracySu
-  twitter : username
-  feedburner : feedname
+  name : Pranav Kant
+  email : pranav913@gmail.com
+  github : pranav913
+  twitter : pranav913
+  feedburner : pranav913
+
+javascripts :
+  enabled : true
+  baseUrl : "/assets/javascripts/require-js"
+
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +31,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://pingmygeek.co.cc/
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -81,7 +86,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : pingmygeek
     livefyre :
       site_id : 123
     intensedebate :
@@ -99,7 +104,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-31921977-1'
     getclicky :
       site_id : 
     mixpanel :
@@ -123,4 +128,7 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
+
+
+
   
