--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ markdown: rdiscount
 pygments: true
 paginate: 5
 
-title: shawhu的blog
-author: signifox
-email: "signifox@gmail.com"
+title: Tracy Su
+author: Tracy Su
+email: "tracysu1860@gmail.com"
